fix java warnings with JDK 23